--- a/Backend/predictor/classify.ipynb
+++ b/Backend/predictor/classify.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,40 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\nitro\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "import nltk\n",
-    "nltk.download('stopwords')\n",
-    "# nltk.download('punkt')"
+    "# from nltk.corpus import stopwords\n",
+    "# from nltk.tokenize import word_tokenize\n",
+    "# # import nltk\n",
+    "# # nltk.download('stopwords')\n",
+    "# # nltk.download('punkt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +44,7 @@
        "(2225, 2)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +122,7 @@
        "4  entertainment  ocean s twelve raids box office ocean s twelve..."
       ]
      },
-     "execution_count": 38,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +148,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +170,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +257,7 @@
        "4  entertainment  ocean s twelve raids box office ocean s twelve..."
       ]
      },
-     "execution_count": 42,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,17 +315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stop_words = set(stopwords.words('english'))\n",
+    "# stop_words = set(stopwords.words('english'))\n",
     "# x = x.apply(lambda text: ' '.join([word for word in word_tokenize(text) if word.lower() not in stop_words]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +345,7 @@
        "Name: text, Length: 2225, dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +385,7 @@
        "Name: category, Length: 1490, dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,19 +487,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import precision_recall_fscore_support\n",
-    "from sklearn.model_selection import cross_val_score"
+    "# from sklearn.metrics import ConfusionMatrixDisplay\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from sklearn.metrics import precision_recall_fscore_support\n",
+    "# from sklearn.model_selection import cross_val_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
