--- a/server/predictor/classify.ipynb
+++ b/server/predictor/classify.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing data manuplation libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from nltk.corpus import stopwords\n",
-    "# from nltk.tokenize import word_tokenize\n",
-    "# # import nltk\n",
-    "# # nltk.download('stopwords')\n",
-    "# # nltk.download('punkt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2225, 2)"
+       "(808, 2)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +117,7 @@
        "4  entertainment  ocean s twelve raids box office ocean s twelve..."
       ]
      },
-     "execution_count": 58,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,34 +127,43 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preperation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "category\n",
-       "sport            511\n",
-       "business         510\n",
-       "politics         417\n",
-       "tech             401\n",
-       "entertainment    386\n",
+       "sport            192\n",
+       "business         190\n",
+       "politics         149\n",
+       "tech             139\n",
+       "entertainment    138\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Couting different types of categories present the the dataset\n",
     "df['category'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -170,27 +174,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Finding NA values \n",
     "df.isna().sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# y=pd.DataFrame({'category': df.pop('category')})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +253,7 @@
        "4  entertainment  ocean s twelve raids box office ocean s twelve..."
       ]
      },
-     "execution_count": 62,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,17 +264,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Spliting data values and target values\n",
     "x = df['text']\n",
     "y = df['category']"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing ML libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,37 +320,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# stop_words = set(stopwords.words('english'))\n",
-    "# x = x.apply(lambda text: ' '.join([word for word in word_tokenize(text) if word.lower() not in stop_words]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       tv future in the hands of viewers with home th...\n",
-       "1       worldcom boss  left books alone  former worldc...\n",
-       "2       tigers wary of farrell  gamble  leicester say ...\n",
-       "3       yeading face newcastle in fa cup premiership s...\n",
-       "4       ocean s twelve raids box office ocean s twelve...\n",
-       "                              ...                        \n",
-       "2220    cars pull down us retail figures us retail sal...\n",
-       "2221    kilroy unveils immigration policy ex-chatshow ...\n",
-       "2222    rem announce new glasgow concert us band rem h...\n",
-       "2223    how political squabbles snowball it s become c...\n",
-       "2224    souness delight at euro progress boss graeme s...\n",
-       "Name: text, Length: 2225, dtype: object"
+       "0      tv future in the hands of viewers with home th...\n",
+       "1      worldcom boss  left books alone  former worldc...\n",
+       "2      tigers wary of farrell  gamble  leicester say ...\n",
+       "3      yeading face newcastle in fa cup premiership s...\n",
+       "4      ocean s twelve raids box office ocean s twelve...\n",
+       "                             ...                        \n",
+       "803    software watching while you work software that...\n",
+       "804    yachvili savours france comeback france scrum-...\n",
+       "805    safin plays down wimbledon hopes newly-crowned...\n",
+       "806    china keeps tight rein on credit china s effor...\n",
+       "807    films on war triumph at sundance a study of th...\n",
+       "Name: text, Length: 808, dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,8 +350,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,27 +368,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "927             sport\n",
-       "1129    entertainment\n",
-       "1991         politics\n",
-       "918              tech\n",
-       "1971            sport\n",
-       "            ...      \n",
-       "960          business\n",
-       "905     entertainment\n",
-       "1096             tech\n",
-       "235          business\n",
-       "1061    entertainment\n",
-       "Name: category, Length: 1490, dtype: object"
+       "355         business\n",
+       "642         business\n",
+       "632             tech\n",
+       "173         politics\n",
+       "277    entertainment\n",
+       "           ...      \n",
+       "715    entertainment\n",
+       "767         business\n",
+       "72          politics\n",
+       "235         business\n",
+       "37     entertainment\n",
+       "Name: category, Length: 541, dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,17 +415,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dumping vectorizer as Pickle\n",
+    "\n",
     "with open('../app/vectorizer.pkl', 'wb') as file:\n",
     "    pickle.dump(vectorizer, file)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find best ML model with highest accuracy "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,15 +466,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selecting best Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9850267340453853\n"
+      "Accuracy: 0.9775805466507921\n"
      ]
     }
    ],
@@ -477,154 +498,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../app/model.pkl', 'wb') as file:\n",
     "    pickle.dump(naive_bayes, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# from sklearn.metrics import precision_recall_fscore_support\n",
-    "# from sklearn.model_selection import cross_val_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# conf_mat = confusion_matrix(y_test, y_pred)\n",
-    "# disp = ConfusionMatrixDisplay(confusion_matrix=conf_mat,\n",
-    "#                                display_labels=naive_bayes.classes_)\n",
-    "# disp.plot()\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for category, text, original_category in zip(y_pred, X_test, y_test):\n",
-    "#     print(\"Predicted category:\", category)\n",
-    "#     print(\"Text:\", text)\n",
-    "#     print(\"Original category:\", original_category)\n",
-    "#     print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "custom_text='''Apple today seeded the third release candidate (RC) version of macOS Ventura 13.4 to developers for testing purposes, with the software coming just a a week after Apple released the second RC. The RC represents the final version of ‌macOS Ventura‌ 13.4 that will be provided to the public, and it is unusual to have three RCs before an official launch.\n",
-    "\n",
-    "Ventura Macs Feature Yellow\n",
-    "Registered developers can download the beta through the Apple Developer Center and after the appropriate profile is installed, with the betas available through the Software Update mechanism in System Settings.\n",
-    "\n",
-    "According to Apple's release notes, the update adds a Sports feed in the sidebar of Apple News and it addresses several bugs, including one that would prevent the Mac Auto Unlock feature from working with the Apple Watch.\n",
-    "\n",
-    "    macOS Ventura 13.4 includes the following enhancements and bug fixes:\n",
-    "    - Sports feed in the sidebar of Apple News gives easy access to stories, scores, standings, and more, for the teams and leagues you follow\n",
-    "    - My Sports score and schedule cards in Apple News take you directly to game pages where you can find additional details about specific games\n",
-    "    - Resolves an issue where Auto Unlock with Apple Watch does not log you into your Mac\n",
-    "    - Fixes a Bluetooth issue where keyboards connect slowly to Mac after restarting\n",
-    "    - Addresses a VoiceOver issue with navigating to landmarks on webpages\n",
-    "    - Fixes an issue where Screen Time settings may reset or not sync across all devices\n",
-    "\n",
-    "    Some features may not be available for all regions, or on all Apple devices.\n",
-    "    For detailed information about the security content of this update, please visit: https://support.apple.com/kb/HT201222\n",
-    "\n",
-    "macOS 13.4 also adds the simplified beta installation method that was first introduced in iOS 16.4. With the update, developers and public beta testers enrolled in Apple's respective programs can toggle on beta updates from System Settings on the Mac, without the need to install a profile.\n",
-    "\n",
-    "An Apple ID associated with either a public beta account or a developer account is required to turn on beta updates, which means that it is no longer possible to use a developer profile not associated with a developer account to install the developer betas.\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# custom_text_filtered = ' '.join([word for word in word_tokenize(custom_text) if word.lower() not in stop_words])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted category: tech\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Custom text input\n",
-    "# custom_text = \"This is a test article about technology\"\n",
-    "\n",
-    "# Vectorize the custom text\n",
-    "custom_text_vectorized = vectorizer.transform([custom_text])\n",
-    "\n",
-    "# Predict the category for the custom text\n",
-    "predicted_category = naive_bayes.predict(custom_text_vectorized)\n",
-    "\n",
-    "# Print the predicted category\n",
-    "print(\"Predicted category:\", predicted_category[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# naive_bayes = MultinomialNB()\n",
-    "# naive_bayes.fit(X_train, y_train)\n",
-    "\n",
-    "# # Predict the categories for the testing data\n",
-    "# y_pred = naive_bayes.predict(X_test)\n",
-    "\n",
-    "# # Calculate the accuracy of the model\n",
-    "# accuracy = accuracy_score(y_test, y_pred)\n",
-    "# print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for category, text, original_category in zip(y_pred, X_test, y_test):\n",
-    "#     print(\"Predicted category:\", category)\n",
-    "#     print(\"Text:\", text)\n",
-    "#     print(\"Original category:\", original_category)\n",
-    "#     print()"
    ]
   }
  ],
